--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "private": true,
+  "homepage": "https://github.com/Milenaslv20/Forms_.git/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
