--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "client",
   "private": true,
-  "homepage": "https://github.com/Milenaslv20/Forms_.git/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -32,5 +31,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "homepage": "https://github.com/Milenaslv20/Forms_.git"
 }
