--- a/client/package.json
+++ b/client/package.json
@@ -32,5 +32,5 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   },
-  "homepage": "https://github.com/Milenaslv20/Forms_.git"
+  "homepage": "https://github.com/Milenaslv20/Forms_.git/"
 }
